fix responsive dropdown style in dark mode

--- a/source/_assets/sass/_navigation.scss
+++ b/source/_assets/sass/_navigation.scss
@@ -12,6 +12,14 @@
     @apply no-underline;
     @apply mb-4;
     @apply mt-0;
-    @apply text-gray-800 dark:text-blue-700;
+    @apply text-gray-800 dark:text-blue-500;
     @apply text-sm;
+
+    &:hover {
+        @apply text-blue-500 dark:text-blue-100;
+    }
+
+    &.active {
+        @apply text-blue-500 dark:text-blue-100
+    }
 }
